feat: add header and footer to all pages

--- a/src/main/styles.scss
+++ b/src/main/styles.scss
@@ -1,4 +1,7 @@
-body {
-    background-color: lightblue;
-    font-family: Arial, sans-serif;
-  }
+.main {
+  margin-top: 10rem;
+}
+
+h1 {
+  margin-bottom: 1000px;
+}
