--- a/common.css
+++ b/common.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: "Open Sans", sans-serif;
     color: white;
+    box-sizing: border-box;
 }
 
 html {
@@ -10,7 +11,7 @@ html {
 }
 
 body {
-    background-color: black;
+    background-color: #111;
 }
 
 body::-webkit-scrollbar {
