--- a/src/common/header/styles.scss
+++ b/src/common/header/styles.scss
@@ -1,5 +1,7 @@
 .header {
+  z-index: 100;
   backdrop-filter: blur(.625rem);
+  background: rgba(17, 17, 17, 0.5);
   position: fixed;
   width: 100%;
   top: 0;
