--- a/src/main/styles.scss
+++ b/src/main/styles.scss
@@ -15,6 +15,7 @@ h5 {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        -webkit-user-drag: none;
       }
       .text-overlay {
         position: absolute;
@@ -30,8 +31,6 @@ h5 {
   }
 }
 
-
-
 .right-block {
   flex: 1;
   display: flex;
@@ -39,6 +38,9 @@ h5 {
   justify-content: space-between;
   margin-left: 20px;
   .offer-card {
+    .icon {
+      -webkit-user-drag: none;
+    }
     padding: 20px;
     border-radius: 10px;
     display: flex;
@@ -63,7 +65,6 @@ h5 {
         color: white;
         padding: 10px 15px;
         text-decoration: none;
-        // font-weight: bold;
         font-size: 0.75rem;
         border-radius: 5px;
         display: inline-block;
